--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,11 @@ jobs:
       - name: define variables
         run: echo define variables
         env:
-          APP_NAME = "movil-app"
-          ENVIRONMENT = "dev"
+          APP_NAME: "movil-app"
+          ENVIRONMENT: "dev"
+          RELEASE_VERSION: ${GITHUB_SHA}
+          REGISTRY: "eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}"
+          IMAGE: "${REGISTRY}:${RELEASE_VERSION}"
       - name: build
         run: docker build . --file etc/docker/Dockerfile --tag ${IMAGE}
       - name: tests
