--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: define variables
-        run: echo define variables $IMAGE
+        run: echo define variables $APP_NAME $IMAGE
         env:
-          APP_NAME: "movil-app"
-          ENVIRONMENT: "dev"
+          APP_NAME: movil-app
+          ENVIRONMENT: dev
           RELEASE_VERSION: ${GITHUB_SHA}
-          REGISTRY: "eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}"
-          IMAGE: "${REGISTRY}:${RELEASE_VERSION}"
+          REGISTRY: eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}
+          IMAGE: ${REGISTRY}:${RELEASE_VERSION}
       - name: build
-        run: docker build . --file etc/docker/Dockerfile --tag $IMAGE
+        run: docker build . --file etc/docker/Dockerfile --tag $APP_NAME
       - name: tests
         run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
 
