--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,25 +6,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
+    env:
+      APP_NAME: movil-app
+      ENVIRONMENT: dev
+      RELEASE_VERSION: ${GITHUB_SHA}
+      REGISTRY: eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}
+      IMAGE: $REGISTRY:$RELEASE_VERSION
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Hello world
-        run: echo Hello world $FIRST_NAME $middle_name $Last_Name!
-        env:
-          FIRST_NAME: Mona
-          middle_name: The
-          Last_Name: Octocat
       - name: define variables
         run: echo define variables $APP_NAME $IMAGE
-        env:
-          APP_NAME: movil-app
-          ENVIRONMENT: dev
-          RELEASE_VERSION: ${GITHUB_SHA}
-          REGISTRY: eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}
-          IMAGE: $REGISTRY:$RELEASE_VERSION
       - name: build
-        run: docker build . --file etc/docker/Dockerfile --tag ${APP_NAME}
+        run: docker build . --file etc/docker/Dockerfile --tag APP_NAME
       - name: tests
         run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
 
