--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       ENVIRONMENT: dev
       RELEASE_VERSION: ${GITHUB_SHA}
       REGISTRY: eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}
-      IMAGE: $REGISTRY:$RELEASE_VERSION
+      IMAGE: ${REGISTRY}:${RELEASE_VERSION}
     
     steps:
       - name: Checkout
