--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,14 +10,16 @@ jobs:
       APP_NAME: movil-app
       ENVIRONMENT: dev
       RELEASE_VERSION: ${GITHUB_SHA}
-      REGISTRY: eu.gcr.io/craft-code-255613/${APP_NAME}-${ENVIRONMENT}
-      IMAGE: ${REGISTRY}:${RELEASE_VERSION}
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Set registry env
+        run: echo ::set-env name=REGISTRY::eu.gcr.io/craft-code-255613/$APP_NAME-$ENVIRONMENT
+      - name: Set image env
+        run: echo ::set-env name=IMAGE::$REGISTRY:$RELEASE_VERSION
       - name: define variables
         run: echo define variables $APP_NAME $IMAGE
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: build
         run: docker build . --file etc/docker/Dockerfile --tag $APP_NAME
       - name: tests
