--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       APP_NAME: movil-app
       ENVIRONMENT: dev
-      RELEASE_VERSION: ${GITHUB_SHA}
+      RELEASE_VERSION: $GITHUB_SHA
     
     steps:
       - name: Set registry env
@@ -20,10 +20,10 @@ jobs:
         run: echo define variables $APP_NAME $IMAGE
       - name: Checkout
         uses: actions/checkout@v2
-      - name: build
-        run: docker build . --file etc/docker/Dockerfile --tag $APP_NAME
-      - name: tests
-        run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
+      #- name: build
+      #  run: docker build . --file etc/docker/Dockerfile --tag $IMAGE
+      #- name: tests
+      #  run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
 
       #añado el uso de artefactos: todo el codigo compilado lo publico en algun sitio donde un job(deploy) siguiente pueda recogerlo y desplegarlo
       #- name: publish de code
