--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       APP_NAME: movil-app
       ENVIRONMENT: dev
-      RELEASE_VERSION: $GITHUB_SHA
+      RELEASE_VERSION: ${{ env.GITHUB_SHA }}
     
     steps:
       - name: Set registry env
