--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,16 @@ jobs:
         run: |
           echo ::set-env name=RELEASE_VERSION::$GITHUB_SHA
           echo ::set-env name=REGISTRY::eu.gcr.io/craft-code-255613/$APP_NAME-$ENVIRONMENT
-      - name: Set IMAGE variable
+      - name: Set IMAGE variables
         run: echo ::set-env name=IMAGE::$REGISTRY:$RELEASE_VERSION
-      - name: define variables
-        run: echo define variables $RELEASE_VERSION $IMAGE
-      #- name: Checkout
-      #  uses: actions/checkout@v2
-      #- name: build
-      #  run: docker build . --file etc/docker/Dockerfile --tag $IMAGE
-      #- name: tests
-      #  run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: build
+        run: docker build . --file etc/docker/Dockerfile --tag $IMAGE
+      - name: tests
+        run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
+      #- name: define variables
+      #  run: echo define variables $RELEASE_VERSION $IMAGE
 
       #añado el uso de artefactos: todo el codigo compilado lo publico en algun sitio donde un job(deploy) siguiente pueda recogerlo y desplegarlo
       #- name: publish de code
