--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           version: '290.0.1'
           #project_id: ${{GCP_PROJECT_ID}}
-          service_account_key: ${GCP_SA_KEY}
+          service_account_key: $GCP_SA_KEY
           export_default_credentials: true
       - run: gcloud info
 
