--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
         run: echo ::set-env name=IMAGE::$APP_NAME-$ENVIRONMENT:$GITHUB_SHA
       - name: Checkout
         uses: actions/checkout@v2
-      - name: build
-        run: docker build . --file etc/docker/Dockerfile --tag $IMAGE
-      - name: tests
-        run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
+      #- name: build
+      #  run: docker build . --file etc/docker/Dockerfile --tag $IMAGE
+      #- name: tests
+      #  run: docker run -w /var/app/ -i $IMAGE node_modules/mocha/bin/mocha
       # Setup gcloud CLI
       - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
