--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Configure docker to use the gcloud command-line tool as a credential helper
         run: gcloud auth configure-docker
       - name: Build image 
-        run: docker build . --file etc/docker/Dockerfile --target production --tag $IMAGE
+        run: docker build . --file etc/docker/Dockerfile --target production --tag $GCP_REGISTRY_HOSTNAME/$GCP_PROJECT_ID/$IMAGE
       - name: Push the Docker image to Google Container Registry
         run: docker push $GCP_REGISTRY_HOSTNAME/$GCP_PROJECT_ID/$IMAGE
 #PENDING
