--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           version: '290.0.1'
           service_account_key: ${{ env.GCP_SA_KEY }}
+          project_id: ${{ env.GCP_PROJECT_ID }}
           export_default_credentials: true
       - name: Configure docker to use the gcloud command-line tool as a credential helper
         run: gcloud auth configure-docker
