--- a/etc/docker/Dockerfile
+++ b/etc/docker/Dockerfile
@@ -4,10 +4,11 @@ MAINTAINER Craft-Code
 
 WORKDIR /var/app
 COPY package*.json ./
-COPY . ./
+
 
 FROM base as development
 
+COPY . ./
 ENV NODE_ENV=development
 RUN npm install
 CMD [ "npm", "run", "app"]
@@ -15,6 +16,7 @@ CMD [ "npm", "run", "app"]
 
 FROM base as production
 
+COPY src ./src
 ENV NODE_ENV=production
 RUN npm install --production
 CMD [ "npm", "run", "app"]
