--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
   CD:
     runs-on: ubuntu-latest
     needs: [CI]
+    if: success() && github.ref == 'refs/heads/master'
+    #if:
+    #  contains('
+    #    refs/heads/staging
+    #    refs/heads/production
+    #  ', github.ref)
     
     env:
       APP_NAME: movil-app
