--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,11 @@
 name: CI
 
-on: [push]
+#on: [push]
+#on:
+#  push:
+#    branches: [master]
+#  pull_request:
+#    branches: [master]
 
 jobs:
   CI:
