--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: CI
 
 #on: [push]
-#on:
-#  push:
-#    branches: [master]
-#  pull_request:
-#    branches: [master]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   CI:
