--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI
 
 on:
   push:
@@ -9,13 +9,13 @@ on:
 jobs:
   CI:
     runs-on: ubuntu-latest
-
+    
     env:
       IMAGE: craft-code:movil-app
-
+    
     steps:
-      - name: checkout
-        uses: actions/checkout@2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: build
         run: docker build . --file etc/docker/Dockerfile --target development --tag $IMAGE
       - name: tests
